--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme and Foundation for sites
+Theme Name:         FancySquares Starter Theme - Based on Sage/Foundation
 Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme. <a href="https://github.com/roots/sage">Contribute on GitHub</a>
-Version:            8.4.0
-Author:             Roots
-Author URI:         https://roots.io/
+Description:        FancySquares is a WordPress Starter Theme
+Version:            --
+Author:             Rory Heaney
+Author URI:         https://fancysquares.com/
 Text Domain:        sage
 
 License:            MIT License
