--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,21 +1,17 @@
+@import "_settings";
+
+
+/*foundation fun*/
+@import "../../bower_components/foundation/scss/foundation/components/accordion",
+		"../../bower_components/foundation/scss/foundation/components/type",
+		"../../bower_components/foundation/scss/foundation/components/block-grid",
+		"../../bower_components/foundation/scss/foundation/components/visibility",
+		"../../bower_components/foundation/scss/foundation/components/forms",
+		"../../bower_components/foundation/scss/foundation/components/grid",
+		"../../bower_components/foundation/scss/foundation/components/top-bar",
+		"../../bower_components/foundation/scss/foundation/components/offcanvas";
+
 @import "common/_variables";
 
-// Automatically injected Bower dependencies via wiredep (never manually edit this block)
-// bower:scss
-@import "../../bower_components/foundation-sites/scss/foundation.scss";
-// endbower
-
-@include foundation-everything;
-
 @import "common/global";
-@import "components/buttons";
-@import "components/comments";
-@import "components/forms";
-@import "components/grid";
-@import "components/wp-classes";
-@import "layouts/header";
-@import "layouts/sidebar";
-@import "layouts/footer";
-@import "layouts/pages";
-@import "layouts/posts";
-@import "layouts/tinymce";
+
