--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -12,6 +12,6 @@
 		"../../bower_components/foundation/scss/foundation/components/offcanvas";
 
 @import "common/_variables";
-
+@import "common/_mixins";
 @import "common/global";
 
