--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -15,3 +15,9 @@
 @import "common/_mixins";
 @import "common/global";
 
+@import "layouts/header";
+@import "layouts/sidebar";
+@import "layouts/footer";
+@import "layouts/pages";
+@import "layouts/posts";
+@import "layouts/tinymce";
