--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -14,6 +14,7 @@
 @import "common/_variables";
 @import "common/_mixins";
 @import "common/global";
+@import "common/type";
 
 @import "layouts/header";
 @import "layouts/sidebar";
